--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -6,12 +6,16 @@ html {
 
 .footer {
   background-image: -webkit-linear-gradient(10deg, #5c3bb2, #05cd76);
-  color: black;
   text-align: center;
   width: 100%;
   position: absolute;
   bottom: 0px;
   left: 0;
+}
+
+.footer-text {
+  color: black;
+  text-decoration: none;
 }
 
 .hero-img {
@@ -251,4 +255,5 @@ html {
   display: table-cell;
   padding-left: 15em;
   vertical-align: middle;
+  color: black;
 }
